Style, dir structure, removed commented code

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ name: johndjameson.com
 markdown: rdiscount
 pygments: true
 exclude: [sass, config.rb]
-permalink: /:categories/:title/
+permalink: /:title/
+
+
