--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 name: johndjameson.com
 markdown: rdiscount
+rdiscount:
+    extensions: [smart]
 pygments: true
 exclude: [sass, config.rb]
 permalink: /:year/:title/
