--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,26 @@
-name: johndjameson.com
+# Jekyll configuration precedence:
+# 1. Gruntfile task
+# 2. config.build.yml
+# 3. config.yml
+
+name: jekyll
+description: YOLO
+author:
+  name: John D. Jameson
+  email: john@johndjameson.com
+
+# Grunt handles images and assets.
+exclude: ['img', 'css', 'js', 'fonts',
+          '**.png', '**.jpg', '**.jpeg', '**.gif', '**.webp', '**.svg', '**.ico']
+
+include: ['.htaccess']
+
+# _config.build.yml sets future and show_drafts to false on `grunt build`
+future: true
+show_drafts: true
+
+# Markdown library
 markdown: rdiscount
-rdiscount:
-    extensions: [smart]
+#   extensions: []
+
 pygments: true
-exclude: [sass, config.rb]
-permalink: /:year/:title/
