--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "jekyll",
+  "name": "johndjameson.com",
   "private": true,
   "version": "0.0.0",
-  "description": "Yeoman workflow for jekyll",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -19,7 +18,7 @@
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-uglify": "~0.3.0",
-    "grunt-contrib-watch": "git://github.com/gruntjs/grunt-contrib-watch.git#b884948805940c663b1cbb91a3c28ba8afdebf78",
+    "grunt-contrib-watch": "~0.6.0",
     "grunt-filerev": "~0.2.0",
     "grunt-jekyll": "~0.4.1",
     "grunt-svgmin": "~0.3.0",
