--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,10 @@ exclude: ['img', 'css', 'js', 'fonts',
 
 include: ['.htaccess']
 
-# _config.build.yml sets future and show_drafts to false on `grunt build`
-future: true
-show_drafts: true
-
-# Markdown library
 markdown: rdiscount
-#   extensions: []
+
+rdiscount:
+  extensions: ['smart']
 
 pygments: true
 
