--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.6.4",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-csslint": "~0.2.0",
