Fix site repository link variable

--- a/data/links.yml
+++ b/data/links.yml
@@ -2,6 +2,6 @@ codeschool    : 'https://codeschool.com'
 dribbble      : 'https://dribbble.com/johndjameson'
 github        : 'https://github.com/johndjameson'
 mvcss         : 'http://mvcss.io'
-source        : 'https://github.com/johndjameson'
+source        : 'https://github.com/johndjameson/johndjameson.com'
 spellbook     : 'https://github.com/spellbook/spellbook'
 twitter       : 'https://twitter.com/johndjameson'
