--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "font-awesome-svg-png": "~1.1.2",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "normalize": "normalize.css#~3.0.3"
   }
 }
