--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "johndjameson.com",
   "version": "7.0.0",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-svgstore": "^0.5.0"
+    "gulp": "^3.9.0",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-svgmin": "^1.1.2",
+    "gulp-svgstore": "^5.0.2"
   }
 }
