--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "font-awesome-svg-png": "~1.1.2",
     "jquery": "~2.1.3",
-    "normalize": "normalize.css#~3.0.3"
+    "normalize": "normalize.css#~3.0.3",
+    "webfontloader": "~1.6.4"
   }
 }
