Update links file

--- a/data/links.yml
+++ b/data/links.yml
@@ -1,9 +1,4 @@
-csswizardry : 'http://csswizardry.com'
-codeschool  : 'https://codeschool.com'
-dribbble    : 'https://dribbble.com/johndjameson'
-feedburner  : 'https://feeds.feedburner.com/johndjameson'
-github      : 'https://github.com/johndjameson'
-mvcss       : 'http://mvcss.io'
-source      : 'https://github.com/johndjameson/johndjameson.com'
-spellbook   : 'https://github.com/spellbook/spellbook'
-twitter     : 'https://twitter.com/johndjameson'
+feedburner    : 'https://feeds.feedburner.com/johndjameson'
+twitter       : 'https://twitter.com/johndjameson'
+typespecimens : 'https://typespecimens.io/'
+typestudies   : 'https://typestudies.com/'
