Add Prettier and ESLint settings

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "endOfLine": "lf",
+  "jsxSingleQuote": true,
+  "printWidth": 80,
   "semi": false,
-  "singleQuote": false,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5"
 }
