--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gatsby-starter-default",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
