--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,11 @@ typings/
 # dotenv environment variables file
 .env
 
-# gatsby files
+# react-static files
 .cache/
-public
+artifacts/
+dist/
+tmp/
 
 # Mac files
 .DS_Store
