--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.2",
+    "json-loader": "^0.5.7",
+    "klaw": "^3.0.0",
+    "prettier": "^2.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-static": "^7.2.0",
     "react-static-plugin-reach-router": "^7.2.0",
     "react-static-plugin-sitemap": "^7.2.0",
-    "react-static-plugin-source-filesystem": "^7.2.0"
+    "react-static-plugin-source-filesystem": "^7.4.0",
+    "slugify": "^1.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
