--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "serve": "serve dist -p 3000"
   },
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@mdx-js/runtime": "^1.6.5",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "babel-loader": "^8.1.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.2",
     "json-loader": "^0.5.7",
     "klaw": "^3.0.0",
+    "mdx": "^0.3.1",
     "prettier": "^2.0.5",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-static": "^7.2.0",
+    "react-static-plugin-mdx": "^7.2.2",
     "react-static-plugin-reach-router": "^7.2.0",
     "react-static-plugin-sitemap": "^7.2.0",
     "react-static-plugin-source-filesystem": "^7.4.0",
