--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-loader": "^0.5.7",
     "klaw": "^3.0.0",
     "mdx": "^0.3.1",
+    "polished": "^3.6.4",
     "prettier": "^2.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.13.1",
