--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-static-plugin-reach-router": "^7.2.0",
     "react-static-plugin-sitemap": "^7.2.0",
     "react-static-plugin-source-filesystem": "^7.4.0",
+    "sanitize.css": "^11.0.1",
     "slugify": "^1.4.0"
   },
   "devDependencies": {
