--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^12.1.4",
     "next-mdx-remote": "4.0.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sanitize.css": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
