--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gray-matter": "^4.0.3",
     "next": "^12.1.4",
     "next-mdx-remote": "4.0.1",
+    "polished": "^4.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sanitize.css": "^13.0.0"
+    "sanitize.css": "^13.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
