--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@mdx-js/react": "1.6.22",
     "gray-matter": "^4.0.3",
     "next": "^12.1.4",
     "next-mdx-remote": "4.0.1",
@@ -16,7 +18,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sanitize.css": "^13.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "theme-ui": "^0.14.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
