--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^12.1.4",
     "next-mdx-remote": "4.0.1",
     "polished": "^4.2.2",
+    "prism-react-renderer": "^1.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sanitize.css": "^13.0.0",
