--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@mdx-js/react": "2.3.0",
+    "@vercel/analytics": "^1.0.1",
     "gray-matter": "^4.0.3",
     "next": "^13.4.4",
     "next-mdx-remote": "4.4.1",
