--- a/package.json
+++ b/package.json
@@ -9,27 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@mdx-js/react": "2.3.0",
-    "@vercel/analytics": "^1.0.1",
-    "gray-matter": "^4.0.3",
-    "next": "^13.4.4",
-    "next-mdx-remote": "4.4.1",
-    "polished": "^4.2.2",
-    "prism-react-renderer": "^2.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sanitize.css": "^13.0.0",
-    "styled-components": "^5.3.11",
-    "theme-ui": "^0.15.7"
-  },
-  "devDependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "prettier": "^2.8.8",
-    "typescript": "5.0.4"
+    "@types/node": "20.5.6",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.2.2"
   }
 }
