--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
+    "prism-react-renderer": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
