--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "modern-normalize": "^2.0.0",
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
     "prism-react-renderer": "^2.0.6",
