--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.2",
     "modern-normalize": "^2.0.0",
-    "next": "13.4.19",
+    "next": "^14.0.2",
     "next-contentlayer": "^0.3.4",
     "prism-react-renderer": "^2.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "slugify": "^1.6.6",
     "typescript": "5.2.2"
   }
