--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.4.4",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "modern-normalize": "^2.0.0",
     "next": "13.4.19",
-    "next-contentlayer": "^0.3.4",
+    "next-contentlayer2": "^0.4.4",
     "prism-react-renderer": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
