--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.0",
     "contentlayer2": "^0.4.4",
     "date-fns": "^3.6.0",
-    "eslint": "8.48.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "13.4.19",
     "modern-normalize": "^2.0.0",
     "next": "13.4.19",
