--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "contentlayer2": "^0.4.4",
     "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.1.4",
     "modern-normalize": "^2.0.0",
-    "next": "13.4.19",
+    "next": "^14.1.4",
     "next-contentlayer2": "^0.4.4",
     "prism-react-renderer": "^2.3.1",
     "react": "18.2.0",
