--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^20.12.4",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.24",
     "clsx": "^2.1.0",
-    "contentlayer2": "^0.4.4",
     "date-fns": "^3.6.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.4",
     "modern-normalize": "^2.0.0",
     "next": "^14.1.4",
-    "next-contentlayer2": "^0.4.4",
     "prism-react-renderer": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "slugify": "^1.6.6",
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.4",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "autoprefixer": "^10.4.19",
+    "contentlayer2": "^0.4.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.4",
+    "next-contentlayer2": "^0.4.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.4"
   }
 }
