--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "@types/node": "^20.12.4",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "autoprefixer": "^10.4.19",
@@ -34,6 +34,8 @@
     "typescript": "^5.4.4"
   },
   "prettier": {
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
