--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "modern-normalize": "^2.0.0",
     "next": "^14.1.4",
     "prism-react-renderer": "^2.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.24",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "contentlayer2": "^0.5.0",
     "eslint": "^8.57.0",
