--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
-    "autoprefixer": "^10.4.19",
     "contentlayer2": "^0.5.0",
     "next-contentlayer2": "^0.5.0",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.5.3"
   },
   "overrides": {
