--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "modern-normalize": "^2.0.0",
-    "next": "15.1.6",
+    "next": "^15.3.3",
     "prism-react-renderer": "^2.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
