--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -18,7 +20,6 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "19.0.8",
@@ -26,11 +27,18 @@
     "contentlayer2": "^0.5.0",
     "next-contentlayer2": "^0.5.0",
     "postcss": "^8.4.39",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.5.3"
   },
   "overrides": {
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
