--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prism-react-renderer": "^2.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
